--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@ var timerRunning = false;
 var id,pause=0,position=0;
 
 function txtScroll() {
+
+var timerID = null;
+  var today=new Date()
+  document.CLOCK.ALARM.value=today.toLocaleString()
+  TimerID=setTimeout("showtime()",1000)
 var i,x
-var message="sandhy hidate.............";
+var message="sandhy test messeage coba-coba aja..!!! :D";
 x=(60/message.length)+1;
  for(i=0;i<=x;i++) message+=" "+message;
  document.tickerTape.tickerTape.value=message.substring(position,position+60);
@@ -29,15 +34,25 @@ id=setTimeout("txtScroll()",1000/10);}function action() {
 
 <title>Belajar Java</title>
 
-<A HREF="newpage.htm" onMouseOver="window.status='Klik di sini melihat halaman selanjutnya!';return true">
+<A HREF="newpage.htm" onMouseOver="window.status='Klik di sini!';return true">
 
 <script language="JavaScript">
-alert("Klik disini");
+alert("Klik OK yaa kalo mau liat..!!!");
 </script>
 
-<body onLoad="txtScroll()">
+<body text="#FF00FF" onLoad="txtScroll()">
 <center><P><BR>
 <form name="tickerTape"><input type=text name="tickerTape" size=50></form>
+</center>
+
+</script>
+</head>
+
+<body background="/home/sandhy/au_ahh/pic/images1.jpg" bgproperties="fixed"><BODY TEXT="#FF00FF"LINK="#FF00FF"
+VLINK="#FF00FF"ALINK="#FF00FF">
+<P><BR><center>
+
+<form name="CLOCK"><input name="ALARM" TYPE="TEXT" SIZE=20 VALUE=""></form>
 </center>
 </body>
 </html>
