--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@ alert("Klik OK yaa kalo mau liat..!!!");
 </script>
 </head>
 
-<body background="/home/sandhy/au_ahh/pic/images1.jpg" bgproperties="fixed"><BODY TEXT="#FF00FF"LINK="#FF00FF"
-VLINK="#FF00FF"ALINK="#FF00FF">
+<body TEXT="#FF00FF" BGCOLOR="#FF8C00" LINK="#0000EE" VLINK="#551A8B" ALINK="#FF0000" onLoad="showtime()">
 <P><BR><center>
 
 <form name="CLOCK"><input name="ALARM" TYPE="TEXT" SIZE=20 VALUE=""></form>
