--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@ alert("Klik OK yaa kalo mau liat..!!!");
 </script>
 </head>
 
-<body TEXT="#FF00FF" BGCOLOR="#FF8C00" LINK="#0000EE" VLINK="#551A8B" ALINK="#FF0000" onLoad="showtime()">
+<body background="https://cloud.githubusercontent.com/assets/11224863/6460035/6c921d48-c1c6-11e4-989d-e35a0203a0a2.jpg" bgproperties="fixed"><BODY TEXT="#FF00FF"LINK="#FF00FF"
+VLINK="#FF00FF"ALINK="#FF00FF">
 <P><BR><center>
 
 <form name="CLOCK"><input name="ALARM" TYPE="TEXT" SIZE=20 VALUE=""></form>
