--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@ alert("Klik OK yaa kalo mau liat..!!!");
 
 </script>
 </head>
+<h1>Hello World!</h1>
+<p><a href="https://www.google.co.id/maps/place/Jl.+Kapuas+Raya+No.145,+Sukmajaya,+Kota+Depok,+Jawa+Barat+16417/@-6.386489,106.845551,3a,52.5y,270h,90t/data=!3m4!1e1!3m2!1sMtP1prybc_-9a3dpzGBH6w!2e0!4m2!3m1!1s0x2e69eb8c690d557b:0x239ee6885afdc5c2!6m1!1e1?hl=id">this is my home.!!</a></p>
 
-<body background="https://cloud.githubusercontent.com/assets/11224863/6460035/6c921d48-c1c6-11e4-989d-e35a0203a0a2.jpg" bgproperties="fixed"><BODY TEXT="#FF00FF"LINK="#FF00FF"
+<body background="https://cloud.githubusercontent.com/assets/11224863/6460259/43c25a66-c1c8-11e4-8098-9dd37f65fcdf.jpg" bgproperties="fixed"><BODY TEXT="#FF00FF"LINK="#FF00FF"
 VLINK="#FF00FF"ALINK="#FF00FF">
 <P><BR><center>
 
