--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
-<h1>Hello World!</h1>
-<p><a href="https://www.google.co.id/maps/place/Jl.+Kapuas+Raya+No.145,+Sukmajaya,+Kota+Depok,+Jawa+Barat+16417/@-6.386489,106.845551,3a,52.5y,270h,90t/data=!3m4!1e1!3m2!1sMtP1prybc_-9a3dpzGBH6w!2e0!4m2!3m1!1s0x2e69eb8c690d557b:0x239ee6885afdc5c2!6m1!1e1?hl=id">this is my home.!!</a></p>
+<h1>Go OPEN SOURCE!</h1>
+<p><a href="https://www.google.co.id/maps/place/Jl.+Kapuas+Raya+No.145,+Sukmajaya,+Kota+Depok,+Jawa+Barat+16417/@-6.386489,106.845551,3a,52.5y,270h,90t/data=!3m4!1e1!3m2!1sMtP1prybc_-9a3dpzGBH6w!2e0!4m2!3m1!1s0x2e69eb8c690d557b:0x239ee6885afdc5c2!6m1!1e1?hl=id">My Map..!!</a></p>
+
 <script language="JavaScript">
 <!-- Hide the script from old browsers --
 
@@ -16,7 +17,7 @@ var timerID = null;
   document.CLOCK.ALARM.value=today.toLocaleString()
   TimerID=setTimeout("showtime()",1000)
 var i,x
-var message="sandhy test messeage coba-coba aja..!!! :D";
+var message="sandhy test line text message...!!!";
 x=(60/message.length)+1;
  for(i=0;i<=x;i++) message+=" "+message;
  document.tickerTape.tickerTape.value=message.substring(position,position+60);
@@ -42,7 +43,7 @@ id=setTimeout("txtScroll()",1000/10);}function action() {
 alert("Klik OK yaa kalo mau liat..!!!");
 </script>
 
-<body text="#000000" onLoad="txtScroll()">
+<body text="#FFA500" onLoad="txtScroll()">
 <center><P><BR>
 <form name="tickerTape"><input type=text name="tickerTape" size=50></form>
 </center>
@@ -50,8 +51,8 @@ alert("Klik OK yaa kalo mau liat..!!!");
 </script>
 </head>
 
-<body background="https://cloud.githubusercontent.com/assets/11224863/6460259/43c25a66-c1c8-11e4-8098-9dd37f65fcdf.jpg" bgproperties="fixed"><BODY TEXT="#000000"LINK="#000000"
-VLINK="#000000"ALINK="#000000">
+<body background="https://cloud.githubusercontent.com/assets/11224863/6478130/ee0ac044-c25e-11e4-8f7b-0090b572a331.jpg" bgproperties="fixed"><BODY TEXT="#FFA500"LINK="#0000FF"
+VLINK="#0000FF"ALINK="#0000FF">
 <P><BR><center>
 
 <form name="CLOCK"><input name="ALARM" TYPE="TEXT" SIZE=20 VALUE=""></form>
