--- a/index.html
+++ b/index.html
@@ -56,6 +56,25 @@ VLINK="#0000FF"ALINK="#0000FF">
 <P><BR><center>
 
 <form name="CLOCK"><input name="ALARM" TYPE="TEXT" SIZE=20 VALUE=""></form>
+
+<form name="frmLogin" id="frmLogin" method="post">
+<table>
+   <tr>
+     <th colspan="2">Login Form</th>
+    </tr>
+    <tr>
+     <td>Username</td>
+     <td><input type="text" id="username" name="username" /></td>
+   </tr> 
+   <tr>
+      <td>Password</td>
+      <td><input type="password" id="password" name="password" /></td>
+   </tr>
+   <tr>
+      <th colspan="2"><input type="submit" name="login" value="Login"></th>
+   </tr>
+</table>
+</form>
 </center>
 </body>
 </html>
