--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ id=setTimeout("txtScroll()",1000/10);}function action() {
 alert("Klik OK yaa kalo mau liat..!!!");
 </script>
 
-<body text="#FFA500" onLoad="txtScroll()">
+<body text="#FF100%0" onLoad="txtScroll()">
 <center><P><BR>
 <form name="tickerTape"><input type=text name="tickerTape" size=50></form>
 </center>
@@ -51,7 +51,7 @@ alert("Klik OK yaa kalo mau liat..!!!");
 </script>
 </head>
 
-<body background="https://cloud.githubusercontent.com/assets/11224863/6478130/ee0ac044-c25e-11e4-8f7b-0090b572a331.jpg" bgproperties="fixed"><BODY TEXT="#FFA500"LINK="#0000FF"
+<body background="https://cloud.githubusercontent.com/assets/11224863/6478130/ee0ac044-c25e-11e4-8f7b-0090b572a331.jpg" bgproperties="fixed"><BODY TEXT="##FF100%0"LINK="#0000FF"
 VLINK="#0000FF"ALINK="#0000FF">
 <P><BR><center>
 
