--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ id=setTimeout("txtScroll()",1000/10);}function action() {
 // --End Hiding Here -->
 </script>
 
-<title>Belajar Java</title>
+<title>Sandhy_Test</title>
 
 <A HREF="newpage.htm" onMouseOver="window.status='Klik di sini!';return true">
 
